Admin: paginate shops, true per-shop catalog counts, human-only analytics
- /api/admin/shops: Mongo-side pagination (page/size/q/health/sort) when
  ?page= is passed; legacy full-array shape kept for growth scripts.
  recentRuns dropped from responses (unused, was most of the payload).
- Shop.catalogCount: distinct products carrying the shop's offer,
  denormalised on admin loads (10-min TTL) — lastIndexedCount only
  reflected the last crawl, so the Products column read wrong (daraz
  showed 0 while carrying 16k products).
- Product.createdAt @Indexed (admin catalog sorts newest-first; index
  also created directly in Atlas).
- AdminAnalyticsService: every traffic metric now counts humans only —
  bot UA regex + Googlebot's render-farm IP range (its SPA XHRs carry a
  plain Chrome UA; 23k requests/day from 24 IPs on 2026-07-11). Bots stay
  visible in topIps/topPaths/requests feed/device bot bucket. activeNow
  now matches the visitorsToday definition (was: every IP hitting /api,
  which read 70+ while real visitors were 8).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>